--- a/frontend/index.html
+++ b/frontend/index.html
@@ -95,8 +95,10 @@
       }
       async function prev(){
 
-        if (current_page - 1 > 0 ){
+        if (current_page - 1 >= 0 ){
             current_page=current_page-1
+            await load(current_page)
+
         }
         else{
             alert("page number can not be less than 0")
